# async-watch

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/: ci.yaml
.github/workflows/: ci.yaml
src/: error.rs  lib.rs  poll_fn.rs
tests/: watch.rs
