[package]
name = "async-watch2"
version = "0.2.0"
authors = ["cynecx <me@cynecx.net>", "Carl Lerche <me@carllerche.com>"]
edition = "2018"
description = "Async watch channel"
documentation = "https://docs.rs/async-watch2"
readme = "README.md"
homepage = "https://github.com/cynecx/async-watch"
repository = "https://github.com/cynecx/async-watch"
license = "Apache-2.0 OR MIT"
keywords = ["async", "asynchronous", "channel", "synchronization"]
categories = ["asynchronous", "concurrency"]

[dependencies]
event-listener = "2.4.0"

[dev-dependencies]
async-executor = "0.1.2"
tokio-test = "0.2.1"
