[package]
name = "async-watch"
version = "0.3.1"
authors = ["cynecx <me@cynecx.net>", "Carl Lerche <me@carllerche.com>"]
edition = "2018"
description = "Async watch channel"
documentation = "https://docs.rs/async-watch"
readme = "README.md"
homepage = "https://github.com/cynecx/async-watch"
repository = "https://github.com/cynecx/async-watch"
license = "Apache-2.0 OR MIT"
keywords = ["async", "asynchronous", "channel", "synchronization"]
categories = ["asynchronous", "concurrency"]

[dependencies]
event-listener = "2.5.1"

[dev-dependencies]
async-executor = "0.1.2"
tokio-test = "0.2.1"
